--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
 
 == next
 more examples: mulit_instance_image_segmentation, similarity_scoring, which_shoe
+tslint and eslint
 
 == 0.5.0
 Inference Service For Customizable Image Feature Extraction
