--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,9 @@
 = CHANGELOG
 
-== next
-more examples: mulit_instance_image_segmentation, similarity_scoring, which_shoe
+== 0.5.1
+Inference Service for Face Feature Extraction service
 tslint and eslint
+more examples: mulit_instance_image_segmentation, similarity_scoring, which_shoe
 
 == 0.5.0
 Inference Service For Customizable Image Feature Extraction
