--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,14 +1,20 @@
-= CHANGELOG
+# CHANGELOG
 
-== 0.5.1
+## next
+examples: 
+- face feature extraction with similarity
+- face detection
+- human detection
+
+## 0.5.1
 Inference Service for Face Feature Extraction service
 tslint and eslint
 more examples: mulit_instance_image_segmentation, similarity_scoring, which_shoe
 
-== 0.5.0
+## 0.5.0
 Inference Service For Customizable Image Feature Extraction
 
-== before 0.5.0
+## before 0.5.0
 Inference Service for Customizable Image Classification
 Inference Service for Optical Character Recognition (OCR)
 Inference Service for Machine Translation
