--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 # CHANGELOG
 
-## next
+## 0.5.2
+Inference Service For Customizable Image Feature Extraction
 examples: 
 - face feature extraction with similarity
 - face detection
